--- a/wallboard/index.html
+++ b/wallboard/index.html
@@ -8,6 +8,14 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=SF+Compact+Display:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <meta http-equiv="Content-Security-Policy" 
+      content="default-src 'self' http: https: data: blob: 'unsafe-inline'; 
+               connect-src 'self' ws: wss: http: https: data: blob:; 
+               script-src 'self' 'unsafe-inline' 'unsafe-eval'; 
+               style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; 
+               font-src 'self' https://fonts.gstatic.com data:; 
+               img-src 'self' data: blob: https:; 
+               media-src 'self' data: blob:;">
   <style>
     * {
       margin: 0;
